# onvif-mavlink-experiments

step1-discovery-into-dicts/discovery/: Cargo.toml
step1-discovery-into-dicts/discovery/src/: main.rs
