[package]
name = "discovery"
version = "0.1.0"
authors = ["Willian Galvani <williangalvani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
onvif = { git = "https://github.com/williangalvani/onvif-rs.git", branch = "zoom", features=["rustls"]}
futures-util = "0.3.8"
tokio = { version = "1.0.1", features = ["full"] }